# docker-diet

./: .gitignore  Cahier.MD  Cargo.toml  docker-diet.toml  install.ps1  install.sh
.github/workflows/: release.yml
diet-cli/: Cargo.toml
diet-cli/src/: analyzer.rs  cli.rs  config.rs  filter.rs  main.rs  oci.rs  report.rs  synthesizer.rs
diet-cli/src/profiler/: ebpf.rs  mod.rs  static_analysis.rs
diet-ebpf/: Cargo.toml
diet-ebpf-common/: Cargo.toml
diet-ebpf-common/src/: lib.rs
diet-ebpf/src/: main.rs
