[workspace]
members = ["diet-cli", "diet-ebpf-common"]
resolver = "2"

[workspace.package]
version = "1.0.0-alpha"
authors = ["Docker-Diet Contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Enterprise Container Optimization & OCI Slimming Engine"
homepage = "https://github.com/docker-diet/docker-diet"
repository = "https://github.com/docker-diet/docker-diet"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
