[package]
name = "diet-cli"
version.workspace = true
edition.workspace = true
description.workspace = true

[[bin]]
name = "docker-diet"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

clap          = { version = "4",    features = ["derive", "env"] }
toml          = "0.8"
oci-spec      = { version = "0.7",  features = ["image"] }
tar           = "0.4"
flate2        = "1.0"
sha2          = "0.10"
hex           = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif     = "0.17"
colored       = "2.1"
walkdir       = "2.0"
goblin        = { version = "0.8",  default-features = false, features = ["elf64", "elf32"] }
chrono        = { version = "0.4",  features = ["serde"] }
bytes         = "1.0"
glob          = "0.3"
humansize     = "2.1"
tempfile      = "3.10"
regex         = "1.10"
diet-ebpf-common = { path = "../diet-ebpf-common", features = ["user"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya     = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
nix     = { version = "0.27", features = ["process"] }
