[package]
name = "diet-ebpf"
version = "1.0.0-alpha"
edition = "2021"
publish = false
description = "eBPF kernel probe programs for docker-diet (Linux only, bpfel target)"

[[bin]]
name = "diet-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
diet-ebpf-common = { path = "../diet-ebpf-common" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
